--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,27 @@
+buildscript {
+    repositories {
+        mavenCentral() // or gradlePluginPortal()
+    }
+    dependencies {
+        classpath("gradle.plugin.se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.79.0")
+    }
+}
+
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.1'
+    id 'org.springframework.boot' version '2.7.4'
     id 'io.spring.dependency-management' version '1.1.0'
+
+    id 'pl.allegro.tech.build.axion-release' version '1.15.1'
+    id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.79.0'
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
+sourceCompatibility = '11'
 
-java {
-    sourceCompatibility = '17'
-}
+apply plugin: 'pl.allegro.tech.build.axion-release'
+apply plugin: "se.bjurr.gitchangelog.git-changelog-gradle-plugin"
 
 configurations {
     compileOnly {
