--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
 }
 
 group = 'com.example'
-version = '0.0.1'
+version = scmVersion.version
 sourceCompatibility = '11'
 
 apply plugin: 'pl.allegro.tech.build.axion-release'
